<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="introduction_text_view">Coffee Shop Desserts</string>
    <string name="donut_caption">Sample donut</string>
    <string name="text_of_donut_description">donut description</string>
    <string name="icecream_caption">Icecream caption text</string>
    <string name="text_of_icecream_description">ice-cream description</string>
    <string name="froyo_caption">Froyo caption text</string>
    <string name="text_of_froyo_description">froyo description</string>
    <string name="donut_on_click_message">You have clicked on Donut</string>
    <string name="icecream_on_click_message">You have clicked on Ice-cream</string>
    <string name="froyo_on_click_message">You have clicked on FroYo</string>
    <string name="activity_clicked_label_text">You have clicked on...</string>
    <string name="first_name_label">first name:</string>
    <string name="first_name">John</string>
    <string name="last_name_label">last name:</string>
    <string name="last_name">Johnson</string>
    <string name="address_label">address:</string>
    <string name="address_text">Adam street</string>
    <string name="phone_label">phone:</string>
    <string name="phone_text">393124578</string>
    <string name="note_label">note:</string>
    <string name="note_text">some note</string>
    <string name="delivery_label">choose a delivery method:</string>
    <string name="same_day_messenger_service">same day messenger service</string>
    <string name="next_day_messenger_service">next day messenger service</string>
    <string name="pick_up_messenger_service">pick up message service</string>
    <string-array name="phone_labels_array">
        <item>home</item>
        <item>work</item>
        <item>mobile</item>
        <item>other</item>
    </string-array>
    <string name="action_contact">contact</string>
    <string name="action_clicked">clicked</string>
    <string name="action_status">status</string>
    <string name="action_favorites">favorites</string>
    <string name="status_message">message of status</string>
    <string name="favorites_message">message of favorites</string>
    <string name="contact_message">message from contact</string>
    <string name="title_activity_clicked">activity clicked</string>
    <string name="date">Date</string>
    <string name="date_picker">date picker</string>
    <string name="time">Time</string>
    <string name="time_toast">Time</string>
    <string name="time_picker">time picker</string>
</resources>
