<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClickedActivity">

    <!-- head -->

    <TextView
            android:id="@+id/activity_clicked_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/activity_clicked_label_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <!-- first name field -->

    <TextView
            android:id="@+id/first_name_label"
            android:text="@string/first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_clicked_text_view"/>

    <EditText
            android:id="@+id/first_name_text"
            android:hint="@string/first_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:autofillHints=""
            android:layout_marginEnd="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/first_name_label"/>

    <!-- last name field -->

    <TextView
            android:id="@+id/last_name_label"
            android:text="@string/last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_label"/>

    <EditText
            android:id="@+id/last_name_text"
            android:hint="@string/last_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:ems="10"
            android:autofillHints=""
            android:layout_marginEnd="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/last_name_label"/>

    <!-- address field -->

    <TextView
            android:id="@+id/address_label"
            android:text="@string/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name_label"/>

    <EditText
            android:id="@+id/address_text"
            android:hint="@string/address_text"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            android:inputType="textMultiLine"
            android:ems="10"
            android:autofillHints=""
            android:layout_marginEnd="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/address_label"/>

    <!-- phone field -->

    <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_label"/>

    <EditText
            android:id="@+id/phone_text"
            android:hint="@string/last_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:text="@string/phone_text"
            android:ems="10"
            android:autofillHints=""
            android:layout_marginEnd="130dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label" />

    <!-- note field -->

    <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/note_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_label"/>

    <EditText
            android:id="@+id/note_text"
            android:hint="@string/last_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            android:inputType="textCapSentences|textMultiLine"
            android:ems="10"
            android:layout_marginEnd="130dp"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/note_label"/>

    <!-- radio group -->

    <TextView
            android:id="@+id/delivery_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/delivery_label"
            app:layout_constraintTop_toBottomOf="@+id/note_label"
            app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delivery_label">


        <RadioButton
                android:id="@+id/same_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/same_day_messenger_service"
                android:onClick="onRadioButtonClicked"
                android:checked="true"/>

        <RadioButton
                android:id="@+id/next_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_day_messenger_service"
                android:onClick="onRadioButtonClicked"/>

        <RadioButton
                android:id="@+id/pick_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_up_messenger_service"
                android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <!-- spinner -->

    <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phone_text"
            app:layout_constraintTop_toBottomOf="@+id/address_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>
